<resources>
    <string name="app_name">Shop</string>
    <string name="home">主页</string>
    <string name="cart">购物车</string>
    <string name="me">我</string>
    <string name="hot">热卖</string>
    <string name="category">分类</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy_now">立即购买</string>
    <string name="select_all">全选</string>
    <string name="calc">结算</string>
    <string name="myOrder">我的订单</string>
    <string name="address">收货地址</string>
    <string name="receive">收件人</string>
    <string name="phone">联系电话</string>
    <string name="address_detail">详细地址</string>
    <string name="add_address">添加地址</string>
    <string name="shop_detail">商品详情页</string>
    <string name="error_empty">不能为空</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
